--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ cgmath = "0.18.0"
 env_logger = "0.11.7"
 image = "0.25.5"
 log = "0.4.26"
+pollster = "0.4.0"
 wgpu = "24.0.1"
 winit = { version = "0.29", features = ["rwh_05"] }
